# Web-Engineering

./: API_Design.md  README.md  installInfo.md  installInfo.txt  install_info.md
backend/: .env  .gitignore  Cargo.toml  Rocket.toml  airlines.sqlite  request_examples.http
backend/corgis/: Cargo.toml
backend/corgis/src/: lib.rs  main.rs
backend/corgis/src/airlines/: mod.rs  test.json  tests.rs
backend/corgis_dataset/: Cargo.toml
backend/corgis_dataset/examples/: airlines_print_airlines_and_carriers.rs
backend/corgis_dataset/src/: lib.rs
backend/corgis_dataset/src/airlines/: mod.rs
backend/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
backend/migrations/2019-03-21-233214_create_airports/: down.sql  up.sql
backend/migrations/2019-03-21-234748_create_carriers/: down.sql  up.sql
backend/migrations/2019-03-21-235243_create_times/: down.sql  up.sql
backend/migrations/2019-03-27-102415_create_airports/: down.sql  up.sql
backend/migrations/2019-03-27-102534_create_carriers/: down.sql  up.sql
backend/migrations/2019-03-27-102629_create_statistics/: up.sql
backend/rocket_contrib_local/: .rustfmt.toml  Cargo.toml
backend/rocket_contrib_local/src/: csv.rs  hal.rs  lib.rs
backend/src/: lib.rs  main.rs  schema.rs  util.rs
backend/src/database/: mod.rs  models.rs  schema.rs
backend/src/routes/: airports.rs  carriers.rs  mod.rs  statistics.rs
backend/src/routes/airports/: get_airport.rs  get_airports.rs  mod.rs  views.rs
backend/src/routes/carriers/: get_carrier.rs  get_carriers.rs  mod.rs  views.rs
backend/src/routes/statistics/: delete_statistic.rs  get_statistic.rs  get_statistics.rs  get_statistics_connection.rs  get_statistics_flights.rs  get_statistics_minutes_delayed.rs  mod.rs  post_statistics.rs  views.rs
docs/: API_Design.md  API_Design.org  Architecture.md  structure.md
frontend/: bsconfig.json  package.json
frontend/src/: Airport.re  Airports.re  Carrier.re  Carriers.re  Graphs.re  Models.re  NotFound.re  Statistic.re  Statistics.re  Utils.re  app.css  app.re  index.re
