[package]
name = "backend"
version = "0.1.0"
authors = ["Troy Karan Harrison <NoxPardalis@protonmail.com>"]
edition = "2018"
publish = false

[dependencies]
corgis = { path = "corgis", version = "*" }
rocket = "0.4.0"
rocket_contrib_local = { path = "rocket_contrib_local", version = "*" }
rustic_hal = "0.2.0"
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "1.0.39"
csv = "1.0.5"
indexmap = "1.0.2"
dotenv = "0.13.0"

[dependencies.rocket_contrib]
version = "0.4.0"
features = ["diesel_sqlite_pool"]
