cargo-features = ["default-run"]

[package]
name = "rocket_corgis"
version = "0.1.0"
authors = ["Troy Karan Harrison <NoxPardalis@protonmail.com>"]
edition = "2018"
default-run = "rocket_corgis"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
corgis_dataset = { path = "corgis_dataset" }
csv = "1.0.5"
diesel = { version = "1.4.2", features = ["postgres", "uuidv07", "chrono", "numeric", "32-column-tables" ] }
dotenv = "0.13.0"
log = "0.4.6"
pretty_env_logger = "0.3.0"
rayon = "1.0.3"
rocket = "0.4.0"
rocket_contrib = { version = "0.4.0", features = ["diesel_postgres_pool"] }
rocket_contrib_local = { path = "rocket_contrib_local" }
rustic_hal = "0.2.0"
serde = "1.0.89"
serde_json = "1.0.39"
uuid = { version = "0.7.3", features = ["serde", "v4"] }
rocket_cors = "0.4.0"
