[package]
name = "corgis"
version = "0.2.0"
authors = ["Troy Karan Harrison <NoxPardalis@protonmail.com>"]
edition = "2018"
publish = false

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0.88", features = ["derive"] }
serde_derive = "1.0.89"
serde_json = "1.0.39"
getset = "0.0.7"
derive-new = "0.5.6"

